[tool.poetry]
name = "wv-render"
version = "0.1.0"
description = ""
authors = ["cynthia2006 <121848440+cynthia2006@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python        = "^3.12"
pyFFTW        = "^0.14.0"
soundfile     = "^0.12.1"
skia-python   = "^87.6"
ffmpeg-python = "^0.2.0"
glfw = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
